# SchoolMonoRepo

./: .gitattributes  .gitignore  CNAME  LICENSE  README.md  index.html
.github/: README.md  readme.md
DoNow1.02-main/: README.md  code.py
DoNow2.01-main/: code.py
DoNow2.03-main/: .replit
DoNow2.04-main/: README.md  code.py
DoNow4.2-main/: README.md  code.js
HighSchool/JavaScript/DoNow4.2/: README.md  code.js  index.html
HighSchool/JavaScript/JsIsh/: Js-ish.js  README.md
HighSchool/JavaScript/Lab-3.3/: README.md  code.js  index.html
HighSchool/JavaScript/Lab4.2/: README.md  code.js  index.html  words.js
HighSchool/JavaScript/QOTD/: README.md  code.js  index.html
HighSchool/JavaScript/VarSwap/: README.md  SwapVars.js
HighSchool/JavaScript/lab4-3/: README.md  code.js  index.html
HighSchool/JavaScript/lab4-4/: README.md  code.js  index.html
HighSchool/JavaScript/lab4-5/: README.md  code.js  index.html
HighSchool/JavaScript/project4/: README.md  game.js  index.html  stylesheet.css  words.js
HighSchool/Python/8ball/: README.md  code.py
HighSchool/Python/DoNow1.02/: README.md  code.py
HighSchool/Python/DoNow1.04/: README.md  code.py
HighSchool/Python/DoNow103/: README.md  code.py
HighSchool/Python/DoNow2.01/: README.md  code.py
HighSchool/Python/DoNow2.03/: README.md  code.py
HighSchool/Python/DoNow2.04/: README.md  code.py
HighSchool/Python/Lab2.01/: README.md  code.py
HighSchool/Python/Lab2.02/: README.md  code.py  pyproject.toml
HighSchool/Python/Lab2.03/: README.md  code.py
HighSchool/Python/Lab2.04/: README.md  code.py
HighSchool/Python/Lab2.05/: README.md  code.py
HighSchool/Python/Lab3.02/: README.md  code.py
HighSchool/Python/Lab3.03/: README.md  code.py
HighSchool/Python/Lesson2.07/: README.md  code.py
HighSchool/Python/Project3/: README.md  code.py
HighSchool/Python/lab1.04/: .replit  README.md  magic_genie.py
HighSchool/Python/lab103/: README.md  code.py
HighSchool/Python/lab3.04/: README.md  code.py
HighSchool/Python/lesson1.01-lab/: README.md  code.py
HighSchool/Python/madlibsPythonThing/: .replit  README.md  code.py
HighSchool/SchoolDomainDecomissioner/: README.md  cmds.bat
JsIsh-main/: Js-ish.js  README.md
Lab-3.3-main/: README.md
Lab2.02-main/: README.md  code.py  requirements.txt
Lab2.04-main/: README.md  code.py
Lab3.02-main/: .gitignore
Lab3.03-main/: README.md
Lab4.2-main/: README.md  code.js  words.js.txt
Lesson2.07-main/: .gitignore
Project3-main/: README.md
QOTD-main/: README.md  index.html
SchoolDomainDecomissioner-main/: README.md
VarSwap-main/: README.md  SwapVars.js
college/Java-Suduko/src/: App.java
college/MCC2024/CSC151/Assignment1/: abA1_1.cpp  abA1_2.cpp  abA1_3.cpp
college/MCC2024/CSC151/Assignment2/: abA2_1.cpp  abA2_2.cpp  abA2_3.cpp
college/MCC2024/CSC151/Assignment3/: abA3_1.cpp  abA3_2.cpp  abA3_3.cpp
college/QCC 2022/T1/1.25/: app.cpp
college/QCC2022.23/2023/CSC109CH06.71/: CMakeLists.txt
college/QCC2022.23/2023/CSC109CH06.72/: TwoDArray.cpp
college/QCC2022.23/2023/CSC109CH07.25/: CMakeLists.txt  ItemToPurchase.h  Tests.h
college/QCC2022.23/2023/CSC109CH07.26/: CMakeLists.txt  ItemToPurchase.h  ShoppingCart.cpp  Tests.h  main.cpp
college/QCC2022.23/2023/CSC109CH07.31B/: main.cpp
college/QCC2022.23/2023/CSC109CH07.32/: CMakeLists.txt
college/QCC2022.23/2023/CSC109CH07.33/: Team.h  Tests.h
college/QCC2022.23/2023/CSC109CH07.34/: CMakeLists.txt  main.cpp
college/QCC2022.23/2023/CSC109CH07.35/: Artist.h  Artwork.cpp  CMakeLists.txt  main.cpp
college/QCC2022.23/2023/CSC109CH08.16Exam3/: CMakeLists.txt  NameList.cpp  NameList.h  NameNode.cpp  Tests.h
college/QCC2022.23/2023/CSC109CH09.15/: main.cpp
college/QCC2022.23/2023/CSC109CH09.17/: Number.cpp  Number.h  main.cpp
college/QCC2022.23/2023/CSC109CH09.19/: LinkedListLibrary.h  VectorLibrary.cpp  VectorLibrary.h
college/QCC2022.23/2023/CSC109CH09.26EXAMSP23/: CMakeLists.txt  Course.cpp  Course.h  course1.txt  main.cpp
college/QCC2022.23/2023/CSC109CH10.11/: CMakeLists.txt  Daily.h  Date.h  Monthly.h  Time.cpp  appt.txt
college/QCC2022.23/2023/CSC109CH10.18EXAM/: CMakeLists.txt  Company.cpp  Company.h  HourlyWorker.h  SalariedWorker.cpp  SalariedWorker.h  Worker.h  main.cpp
college/QCC2022.23/2023/CSC109EXAM2/: Student.cpp  Tests.h  main.cpp
college/QCC2022.23/2023/CSC109MockExam1/: CMakeLists.txt  Car.h  CarList.cpp  CarList.h  Tests.h  (+1 more)
college/QCC2022.23/CSC109/CSC109CH06.72/: CMakeLists.txt  Tests.h  TwoDArray.h  main.cpp
college/QCC2022.23/CSC109/CSC109CH07.31B/: CMakeLists.txt  Tests.h  Triangle.cpp  Triangle.h
college/QCC2023/7.29/: Triangle.cpp  main.cpp
college/QCC2023/7.30/: Car.h
college/QCC2023/7.31/: Team.cpp  Team.h  main.cpp
college/QCC2023/7.32/: CMakeLists.txt  FoodItem.h  main.cpp  test.h
college/QCC2023/7.33/: Artwork.cpp  Artwork.h  CMakeLists.txt  test.h
college/QCC2023/7.35-EXAM/: CMakeLists.txt  main.cpp  test.h
college/QCC2023/7.38/: ItemToPurchase.cpp  ItemToPurchase.h  main.cpp  test.h
college/QCC2023/7.39/: CMakeLists.txt  ItemToPurchase.cpp  ItemToPurchase.h  ShoppingCart.h
college/QCC2023/CSC109/10.15/: CMakeLists.txt  Course.cpp  Course.h  OfferedCourse.cpp  OfferedCourse.h  main.cpp  test.h
college/QCC2023/CSC109/6.72/: CMakeLists.txt  TwoDArray.cpp  TwoDArray.h  main.cpp
college/inclass11.17.21/src/: App.java
college/inclass9.22.21/src/: App.java
college/la1-SomeAspy/: README.md
college/la2-SomeAspy/: .project
college/la3-SomeAspy/: README.md
college/la4-SomeAspy/: .project  README.md
college/pa1-SomeAspy/: .gitignore  .project
college/pa2-SomeAspy/: README.md
college/pa3-SomeAspy/: README.md
college/pa4-SomeAspy/: .project
college/pa5-SomeAspy/: .project
college/pa6-SomeAspy/: .project
college/pa7-test-SomeAspy/: .project
lab1.04-main/: .replit  README.md
lab103-main/: code.py
lab3.04-main/: README.md  code.py
lab4-3-main/: index.html
lesson1.01-lab-main/: README.md  code.py
madlibsPythonThing-main/: code.py
project4-main/: README.md  game.js  stylesheet.css  words.js.txt
(+453 files in other folders)
