[tool.poetry]
name = "lab2.02"
version = "0.1.0"
description = ""
authors = ["Aiden <33640860+SomeAspy@users.noreply.github.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
rickroll = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
